--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-dark bg-dark">
         <span class="navbar-brand mb-0 h1">Xpense Manager</span>
         <span class="navbar-brand mb-0 h1" id="headingTotal"></span>
-        <span class="navbar-brand mb-0 h1"><button id="logout"> <i class="fas fa-power-off"></i></button></span>
+        <!-- <span class="navbar-brand mb-0 h1"><button id="logout"> <i class="fas fa-power-off"></i></button></span> -->
     </nav>
 
     <div class="container-fluid bg-light" style="min-height: 100vh"> 
@@ -62,9 +62,9 @@
                         <button class="btn btn-outline-primary" type="button" id="btnAddExpense">Add</button>
                     </div>
                 </div>
-                <div class="input-group-append">
+                <!-- <div class="input-group-append">
                     <button class="btn btn-outline-primary" type="button" id="btnReset">Reset</button>
-                </div>
+                </div> -->
             </div>
 
             <div>
